[package]
name = "mprober"
version = "0.11.0-beta.8"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2018"
repository = "https://github.com/magiclen/m-prober"
homepage = "https://magiclen.org/m-prober"
keywords = ["probe", "mprober", "m-prober", "linux", "monitor"]
categories = ["command-line-utilities"]
description = "This program aims to collect Linux system information including hostname, kernel version, uptime, RTC time, load average, CPU, memory, network interfaces, block devices and processes. It can be used not only as a normal CLI tool, but also a web application with a front-end webpage and useful HTTP APIs."
readme = "README.md"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE", "front-end/**/*", "views/**/*"]

[profile.release]
lto = true
codegen-units = 1

[dependencies]
mprober-lib = "0.1"

clap = "2.33.1"
concat-with = "0.2"
terminal_size = "0.1"

validators = "0.22"
byte-unit = "4"
termcolor = "1"
getch = "0.2"
once_cell = "1"

rand = "0.8"
serde_json = "1"
chrono = "0.4"
regex = "1"
users = "0.11"

benchmarking = "0.4"
base64 = "0.13"

rocket = { git = "https://github.com/SergioBenitez/Rocket", version = "0.5.0-dev" }
rocket-simple-authorization = { git = "https://github.com/magiclen/rocket-simple-authorization", version = "0.10" }
rocket-cache-response = { git = "https://github.com/magiclen/rocket-cache-response", version = "0.6" }
rocket-json-response = { git = "https://github.com/magiclen/rocket-json-response", version = "0.6" }
rocket-include-static-resources = { git = "https://github.com/magiclen/rocket-include-static-resources", version = "0.10", features = ["cache"] }
rocket-include-handlebars = { git = "https://github.com/magiclen/rocket-include-handlebars", version = "0.13" }

[dependencies.validators-derive]
version = "0.22"
default-features = false
features = ["unsigned_integer", "number"]