[package]
name = "mprober"
version = "0.11.0-beta.16"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
rust-version = "1.70"
repository = "https://github.com/magiclen/m-prober"
homepage = "https://magiclen.org/m-prober"
keywords = ["probe", "mprober", "m-prober", "linux", "monitor"]
categories = ["command-line-utilities"]
description = "This program aims to collect Linux system information including hostname, kernel version, uptime, RTC time, load average, CPU, memory, network interfaces, block devices and processes. It can be used not only as a normal CLI tool, but also a web application with a front-end webpage and useful HTTP APIs."
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE", "front-end/**/*", "views/**/*"]

[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]
clap = { version = "4", features = ["derive"] }
concat-with = "0.2"
terminal_size = "0.3"

anyhow = "1"

mprober-lib = "0.1"

termcolor = "1"
getch = "0.3"

byte-unit = "5"
once_cell = "1"

rand = "0.8"
serde_json = "1"
chrono = "0.4"
regex = "1"
users = "0.11"

benchmarking = "0.4"

rocket = "0.5.0-rc.4"
rocket-simple-authorization = "0.10"
rocket-cache-response = "0.6"
rocket-json-response = "0.6"
rocket-include-static-resources = { version = "0.10", features = ["cache"] }
rocket-include-handlebars = "0.13"

[dependencies.validators]
version = "0.24"
default-features = false
features = ["derive", "unsigned_integer", "number"]
