[package]
name = "magiclen-prober"
version = "0.2.0"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2018"

[dependencies]
free = { path = "../free" }
load-average = { path = "../load-average" }
cpu-info = { path = "../cpu-info" }
hostname = { path = "../hostname" }
time = { path = "../time" }
network = { path = "../network" }

clap = "2"
byte-unit = "2.1"
serde_json = "1"
termcolor = "1"
terminal_size = "0.1"
getch = "0.2"

[dependencies.validators]
version = "0.20"
features = ["serdely", "rocketly"]